<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General MIDI level 1 program names, in program order 0 to 127. -->
    <string-array name="gm_program_names">
        <item>Acoustic Grand Piano</item>
        <item>Bright Acoustic Piano</item>
        <item>Electric Grand Piano</item>
        <item>Honky-tonk Piano</item>
        <item>Electric Piano 1</item>
        <item>Electric Piano 2</item>
        <item>Harpsichord</item>
...
        <item>Rock Organ</item>
        <item>Church Organ</item>
        <item>Reed Organ</item>
        <item>Accordion</item>
        <item>Harmonica</item>
        <item>Tango Accordion</item>
        <item>Acoustic Guitar (nylon)</item>
        <item>Acoustic Guitar (steel)</item>
        <item>Electric Guitar (jazz)</item>
        <item>Electric Guitar (clean)</item>
        <item>Electric Guitar (muted)</item>
        <item>Overdriven Guitar</item>
        <item>Distortion Guitar</item>
...
